--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -19,13 +19,7 @@
   }
 }
 
-#site-logo,
-.logo-big,
-.d-header .logo-big,
-.d-header #site-logo {
-  max-height: 80px !important;
-  height: 80px !important;
-}
+// Logo sizing handled in common.scss (120px)
 
 // ============================================
 // Sidebar
